@@ -3,10 +3,14 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
  [00 Minor]
  - Add create_plugin utility.
+ - Test enhancements.
 
  [Dependencies::Stats]
  - Dependencies changed since 1.002000, see misc/*.deps* for details
  - runtime: +2
+
+ [Tests]
+ - Test coverage improved.
 
 1.002000 2014-08-22T17:40:28Z
  [00 Minor]
